# climate-credit-risk

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  firm.ipynb  firm.py  opt_emission_decomp.ipynb  pca.ipynb  portfolio.ipynb  pyproject.toml  rhs_l1_error.ipynb  utils.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency.yml  lint.yml  stale.yml
