[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climate_credit_risk"]

[project]
name = "climate-credit-risk-os"
version = "0.1.0"
authors = [{ name = "Florian Bourgey", email = "fbourgey@bloomberg.net" }]
description = "Code for the paper 'An Efficient SSP-based Methodology for Assessing Climate Risks of a Large Credit Portfolio'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "nbqa>=1.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pylint>=3.3.7",
    "ruff>=0.11.8",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "types-seaborn>=0.13.2.20250111",
    "types-tqdm>=4.67.0.20250417",
]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
